@@ -22,6 +22,8 @@
   return one or more pk(s)
 - jQuery::dimensions plugin was removed because it has been bundled to
   the jQuery core
+- P4A_Mask's default template now includes CSS first and then JS, solving
+  some jQuery related issues (on safari/opera)
 
 3.0.0-rc2
 - a bug with P4A_Field::getAsCheckbox() method was solved
